--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.3.0",
   "description": "Steal My Cryptocurrency Trading Bot!",
   "engines": {
-    "node": "10.x"
+    "node": "14.x"
   },
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "test": "node test.js"
   },
   "dependencies": {
-    "@truffle/hdwallet-provider": "^1.0.35",
+    "@truffle/hdwallet-provider": "^1.2.1",
     "axios": "^0.19.2",
     "console.table": "^0.10.0",
     "dotenv": "^8.2.0",
@@ -21,7 +21,8 @@
     "lodash": "^4.17.15",
     "moment": "^2.25.3",
     "moment-timezone": "^0.5.28",
-    "numeral": "^2.0.6"
+    "numeral": "^2.0.6",
+    "web3": "^1.2.11"
   },
   "devDependencies": {
     "request": "^2.81.0"
